[workspace]
members = [
    "src/scheduler",
    "src/runner",
    "src/submitter",
    "src/common",
    "src/cli",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
dotenv = "0.15.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
bollard = { version = "0.18.1", features = [
    "buildkit",
    "chrono",
    "json_data_content",
] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1.17"
regex = "1.11.1"
tonic = "0.13.1"
prost = "0.13.5"
tonic-reflection = "0.13.1"
tempfile = "3.20.0"
tar = "0.4.44"
flate2 = "1.1.1"
uuid = { version = "1.7", features = ["v4"] }
figment = { version = "0.10.19", features = ["env", "toml"] }
tonic-web = "0.13.1"
