[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
tar = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
tonic-build = "0.13.1"
