[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tonic-reflection = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
tokio-stream = { workspace = true }
dotenv = { workspace = true }
figment = { workspace = true }
tonic-web = { workspace = true }
async-nats = { workspace = true }

[build-dependencies]
tonic-build = "0.13.1"
