[package]
name = "submitter"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tonic-reflection = { workspace = true }

[build-dependencies]
tonic-build = "0.13.1"
